--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,6 @@
 /**index.wxss**/
 page {
-  background-color: #faede7;
+  background-color: #f1f1f1;
 }
 
 /* 搜索框 */
@@ -67,359 +67,4 @@ page {
 .index-ad {
   width: 750rpx;
   margin-bottom: 56rpx;
-}
-
-/* 产品专区 */
-.hdj-block,
-.hdj-activity {
-  position: relative;
-  box-shadow: 0 2rpx 18rpx #eee;
-  margin-bottom: 50rpx;
-}
-.hdj-block.special,
-.hdj-activity.special {
-  background-color: #c25824;
-  padding-bottom: 24rpx;
-}
-.hdj-block .hdj-block-header,
-.hdj-activity .hdj-block-header,
-.hdj-block .hdj-activity-header,
-.hdj-activity .hdj-activity-header {
-  width: 716rpx;
-  margin: 0 auto;
-}
-.hdj-block .hdj-block-header image,
-.hdj-activity .hdj-block-header image,
-.hdj-block .hdj-activity-header image,
-.hdj-activity .hdj-activity-header image {
-  width: 100%;
-}
-
-.hdj-block .hdj-block-product-list,
-.hdj-activity .hdj-block-product-list,
-.hdj-block .hdj-activity-product-list,
-.hdj-activity .hdj-activity-product-list {
-  display: block;
-  overflow-y: scroll;
-  position: relative;
-  width: 716rpx;
-  margin: 24rpx auto 0;
-  white-space: nowrap;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item {
-  display: inline-block;
-  letter-spacing: normal;
-  text-align: center;
-  margin-right: 8rpx;
-  padding: 12rpx 10rpx 24rpx;
-  background-color: #ffffff;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item:last-child,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item:last-child,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item:last-child,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item:last-child,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item:last-child,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item:last-child,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item:last-child,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item:last-child {
-  margin-right: 0;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-img,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-img,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-img,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-img,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-img,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-img,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-img,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-img,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-img,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-img,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-img,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-img,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-img,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-img,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-img,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-img {
-  width: 262rpx;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-name,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-name,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-name,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-name,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-name,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-name,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-name,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-name,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-name,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-name,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-name,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-name,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-name,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-name,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-name,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-name,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-desc {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  width: 262rpx;
-  overflow: hidden;
-  font-size: 24rpx;
-  line-height: 1;
-  text-align: left;
-  margin: 30rpx auto 12rpx;
-  font-weight: bold;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-desc,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-desc,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-desc,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-desc,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-desc {
-  font-size: 20rpx;
-  color: #b6b6b5;
-  margin: 0 auto 16rpx;
-  line-height: 1.2;
-  font-weight: normal;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price {
-  color: #c7162b;
-  font-size: 33rpx;
-  line-height: 1;
-  text-align: left;
-  display: flex;
-  width: 262rpx;
-  margin: 0 auto;
-  align-items: center;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price .product-price-mark,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price .product-price-mark,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price .product-price-mark,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price .product-price-mark,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price .product-price-mark,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price .product-price-mark,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price .product-price-mark,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price .product-price-mark,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price .product-price-mark,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price .product-price-mark,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price .product-price-mark,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price .product-price-mark,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price-mark,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price-mark,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price-mark,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price-mark {
-  font-size: 26rpx;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price .product-price,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price .product-price,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price .product-price,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price .product-price,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price .product-price,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price .product-price,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price .product-price,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price .product-price,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price .product-price,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price .product-price,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price .product-price,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price .product-price,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price .product-price {
-  flex-grow: 1;
-  font-size: 33rpx;
-}
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price .product-market-price,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-block-product-price .product-market-price,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price .product-market-price,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-block-product-price .product-market-price,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price .product-market-price,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-block-product-price .product-market-price,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price .product-market-price,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-block-product-price .product-market-price,
-.hdj-block .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price .product-market-price,
-.hdj-activity .hdj-block-product-list .hdj-block-product-item .hdj-activity-product-price .product-market-price,
-.hdj-block .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price .product-market-price,
-.hdj-activity .hdj-activity-product-list .hdj-block-product-item .hdj-activity-product-price .product-market-price,
-.hdj-block .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price .product-market-price,
-.hdj-activity .hdj-block-product-list .hdj-activity-product-item .hdj-activity-product-price .product-market-price,
-.hdj-block .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price .product-market-price,
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item .hdj-activity-product-price .product-market-price {
-  text-decoration: line-through;
-  font-size: 26rpx;
-  color: #999999;
-}
-.hdj-activity {
-  background-image: linear-gradient(to right, #f48802, #fec502);
-  margin: 0 auto 20px;
-  padding: 20rpx 0;
-  width: 716rpx;
-  border-radius: 10rpx;
-}
-.hdj-activity .hdj-activity-header {
-  display: flex;
-  padding: 24rpx 0 30rpx;
-  width: 716rpx;
-  margin: 0 auto;
-  border-radius: 10rpx 10rpx 0 0;
-  align-items: center;
-  color: #ffffff;
-}
-.hdj-activity .hdj-activity-header h2 {
-  font-weight: normal;
-  font-size: 32rpx;
-  padding-left: 20rpx;
-  line-height: 1.2;
-}
-.hdj-activity .hdj-activity-header .hdj-activity-timer {
-  margin-left: 30rpx;
-  font-size: 28rpx;
-  line-height: 1.2;
-}
-.hdj-activity .hdj-activity-header .hdj-activity-timer .hour,
-.hdj-activity .hdj-activity-header .hdj-activity-timer .minute,
-.hdj-activity .hdj-activity-header .hdj-activity-timer .seconds {
-  background-color: #ffffff;
-  color: #c25824;
-  padding: 4rpx 6rpx;
-  border-radius: 10rpx;
-}
-.hdj-activity .hdj-activity-product-list {
-  margin: 0 auto;
-  border-radius: 0 0 10rpx 10rpx;
-  padding: 10rpx 0;
-  width: 684rpx;
-}
-.hdj-activity .hdj-activity-product-list .hdj-activity-product-item {
-  background-color: #ffffff;
-  padding: 12rpx 10rpx 24rpx;
-  border-radius: 10rpx;
-}
-/* 猜你喜欢 */
-.hdj-favorite-block {
-  width: 90%;
-  padding: 0 0 16px;
-  box-shadow: 0 1px 9px #eee;
-  margin: 0 auto;
-}
-.hdj-favorite-block h3 {
-  font-weight: bold;
-  font-size: 16px;
-  padding: 0 0 10px;
-}
-.hdj-favorite-block .hdj-favorite-product-list {
-  overflow-y: scroll;
-  white-space: nowrap;
-  height: 226px;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item {
-  letter-spacing: normal;
-  width: 120px;
-  margin-right: 4px;
-  display: inline-block;
-  padding: 5px 5px 12px;
-  border-radius: 5px;
-  background-color: #ffffff;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item:last-child {
-  margin-right: 0;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item .hdj-favorite-product-img {
-  width: 100%;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item .hdj-favorite-product-name,
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item .hdj-favorite-product-desc {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  width: 110px;
-  overflow: hidden;
-  font-size: 12px;
-  line-height: 1;
-  text-align: left;
-  margin: 12px auto 6px;
-  font-weight: 600;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item .hdj-favorite-product-desc {
-  font-size: 10px;
-  color: #b6b6b5;
-  margin: 6px auto;
-  line-height: 16px;
-  font-weight: normal;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item .hdj-favorite-product-price {
-  color: #c7162b;
-  font-size: 17px;
-  line-height: 1;
-  text-align: left;
-  display: flex;
-  width: 110px;
-  margin: 0 auto;
-  align-items: center;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item .hdj-favorite-product-price .hdj-price {
-  font-size: 17px;
-  font-weight: normal;
-  margin-right: 5px;
-  color: #c7162b;
-  flex-grow: 1;
-}
-.hdj-favorite-block .hdj-favorite-product-list .hdj-favorite-product-item .hdj-favorite-product-price .hdj-market-price {
-  font-size: 13px;
-}
-.hdj-price {
-  color: #b80333;
-  font-size: 17px;
-  line-height: 2;
-}
-.hdj-market-price {
-  color: #999999;
-  text-decoration: line-through;
-  font-size: 13px;
-  line-height: 2;
 }
