--- a/pages/order/detail.wxml
+++ b/pages/order/detail.wxml
@@ -1,34 +1,43 @@
 <!--pages/order/detail.wxml-->
 <wxs module="filters" src="../../assets/utils.wxs"></wxs>
 
+<!-- 订单状态 -->
 <view class="order-status-block" wx:if="{{order.status == 6}}">
   <view class="order-status">订单{{order.status_str}}</view>
   <icon class="iconfont icon-await-receive"></icon>
 </view>
 
-<!-- 收货人信息 -->
-<view class="consignee-block">
-  <icon class="iconfont icon-location font-xxl"></icon>
-  <view class="consignee-info">
-    <view class="consignee">
-      <text>收件人：{{order.consignee}}</text>
-      <text class="mobile">{{order.mobile}}</text>
-    </view>
+<view class="order-status-block" wx:else>
+  <icon class="iconfont icon-order-list"></icon>
+  <view class="order-status">订单状态: {{order.status_str}}</view>
+</view>
 
-    <view class="address">
-      <text class="label">收货地址：</text>
-      <text class="detail">{{order.address}}</text>
+<!-- 收货人信息 -->
+<view class="address">
+  <view class="address-decoration"></view>
+  <view>
+    <view class="address-meta">
+      <icon class="iconfont icon-address"></icon>
+      <text>收货信息</text>
+    </view>
+    <view class="address-info meta-with-arrow">
+      <view class="address-consignee">
+        <text>{{order.consignee}}</text>
+        <text class="address-mobile">{{order.mobile}}</text>
+      </view>
+      <text class="address-detail">{{order.address}}</text>
     </view>
   </view>
+  <view class="address-decoration"></view>
 </view>
 
 <!-- 订单信息 -->
 <view class="order">
-  <view class="shop-info">商家：{{order.shop_name}}</view>
+  <view class="shop-info meta-with-arrow">商家：{{order.shop_name}}</view>
   <view class="order-detail" wx:for="{{order.details}}" wx:key="id" wx:for-item="detail">
     <image src="{{detail.img}}" class="detail-img" mode="widthFix"/>
     <view class="detail-info">
-      <text class="detail-name">{{detail.name}}</text>
+      <text class="detail-name">{{detail.product_name}}</text>
       <text class="detail-attributes font-s">{{detail.attributes}}</text>
       <view class="tags">
         <text wx:if="{{detail.is_gift}}" class="gift-tag">赠</text>
@@ -58,24 +67,39 @@
   <view class="order-summary">
     <view class="order-row">
       <text class="label">商品合计</text>
-      <text class="value">￥{{filters.toFix(order.product_amount, 2)}}</text>
+      <text class="value font-red">￥{{filters.toFix(order.product_amount, 2)}}</text>
     </view>
-    <view class="order-row" wx:if="{{order.delivery_fee > 0}}">
+    <view class="order-row">
       <text class="label">运费</text>
-      <text class="value">￥{{filters.toFix(order.delivery_fee, 2)}}</text>
+      <text class="value font-red">￥{{filters.toFix(order.delivery_fee, 2)}}</text>
+    </view>
+    <view class="order-row" wx:if="{{order.coupon_amount > 0}}">
+      <text class="label">优惠券</text>
+      <text class="value">-￥{{filters.toFix(order.coupon_amount, 2)}}</text>
+    </view>
+    <view class="order-row" wx:if="{{order.balance_paid > 0}}">
+      <text class="label">余额支付</text>
+      <text class="value">-￥{{filters.toFix(order.balance_paid, 2)}}</text>
+    </view>
+    <view class="order-row" wx:if="{{order.integral_paid > 0}}">
+      <text class="label">积分抵用</text>
+      <text class="value">-￥{{filters.toFix(order.integral_paid/order.integral_rate, 2)}}</text>
+    </view>
+    <view class="order-row" wx:if="{{order.reward_paid > 0}}">
+      <text class="label">佣金抵用</text>
+      <text class="value">-￥{{filters.toFix(order.reward_paid/order.reward_rate, 2)}}</text>
     </view>
   </view>
 
   <view class="order-amount">
     <view class="order-row">
-      <text class="label">实付：</text>
+      <text class="label">实付总额（含运费）：</text>
       <text class="value font-red">￥{{filters.toFix(order.amount, 2)}}</text>
     </view>
   </view>
 </view>
 
 <view class="blank-block"></view>
-
 
 <view class="toolbar" wx:if="{{order.status == 1}}">
   <button class="order-opera" catchtap="cancelOrder">取消订单</button>
