--- a/pages/order/detail.wxss
+++ b/pages/order/detail.wxss
@@ -1,4 +1,53 @@
 /* pages/order/detail.wxss */
+/* 地址信息 */
+.address {
+  background-color: #fff;
+  color: #565656;
+}
+
+.address .address-decoration {
+  height: 6rpx;
+  background: url('http://m.hdjshop.cn/themes/hdj/images/colourBar.png') repeat-x;
+  background-size: contain;
+}
+
+.address view {
+  font-size: 32rpx;
+}
+
+.address .icon-plus::before {
+  margin-left: 10rpx;
+}
+
+.address .address-meta {
+  border-bottom: 2rpx solid #dddddd;
+  padding: 24rpx 28rpx;
+  font-size: 28rpx;
+}
+
+.address .icon-address {
+  font-size: 32rpx;
+  margin-right: 10rpx;
+  color: #999999;
+}
+
+.address .address-info {
+}
+
+.address .address-info.meta-with-arrow::after {
+  display: none;
+}
+
+.address .address-consignee {
+  display: flex;
+  margin: 0 30rpx 20rpx 0;
+}
+
+.address .address-consignee .address-mobile {
+  flex-grow: 1;
+  text-align: right;
+}
+
 .order-status-block {
   background-color: #C7162B;
   padding: 20rpx 50rpx;
@@ -16,44 +65,6 @@
 .order-status-block icon {
   font-size: 120rpx;
   color: #a3a3a3;
-}
-
-.consignee-block {
-  background-color: #ffffff;
-  padding: 30rpx;
-  display: flex;
-  align-items: center;
-  color: #a3a3a3;
-}
-
-.consignee-block icon {
-  margin-right: 20rpx;
-}
-
-.consignee-block .consignee-info {
-  flex-grow: 1;
-}
-
-.consignee-block .consignee-info .consignee {
-  display: flex;
-}
-
-.consignee-block .consignee-info .consignee .mobile {
-  flex-grow: 1;
-  text-align: right;
-}
-
-.consignee-block .consignee-info .address {
-  margin-top: 20rpx;
-  display: flex;
-}
-
-.consignee-block .consignee-info .address .label {
-  width: 180rpx;
-}
-
-.consignee-block .consignee-info .address .detail {
-  flex-grow: 1;
 }
 
 .order {
